--- a/views/lending_holiday_delete.jade
+++ b/views/lending_holiday_delete.jade
@@ -7,7 +7,7 @@ block content
         li
           a(href="/") /
         li
-          a(href="/lendings/recent") 관리자 관리
+          a(href="/lendings/holiday/delete") 관리자 관리
           ul
             li
               a(href="/users/serch") 관리자검색
@@ -18,7 +18,7 @@ block content
             li
               a(href="/users/delete") 관리자삭제
         li
-          a(href="/lendings/recent") 회원 관리
+          a(href="/lendings/holiday/delete") 회원 관리
           ul
             li
               a(href="/members/serch") 회원검색
@@ -31,7 +31,7 @@ block content
             Li 
               a(href="/members/overdue") 연체회원 관리
         li
-          a(href="/lendings/recent") 자료 관리
+          a(href="/lendings/holiday/delete") 자료 관리
           ul
             li
               a(href="/books/serch") 자료검색
@@ -42,7 +42,7 @@ block content
             li
               a(href="/books/delete") 자료삭제
         li
-          a(href="/lendings/recent") 대출 반납 관리 
+          a(href="/lendings/holiday/delete") 대출 반납 관리 
           ul
             li
               a(href="/lendings/register") 대출등록
@@ -58,42 +58,28 @@ block content
               a(href="/lendings/holiday/delete") 휴관일 삭제
 
   header(class="w3-header w3-center")
-    h2 Lending Recent
+    h2 Hoilday delete 
   
   section(class="w3-cyan w3-center")
     acticle(class="w3-text-white")
-      h2 전체 대출/반납 내역
+      h2 휴관일을 삭제하세요 
       form(method="post")
-        input(type="radio" name ="radio" value="LENDING.LIBRARY_ID" checked="checked") 
-        |대출자 ID
-        input(type="radio" name ="radio" value="LEDNING.RECORD_ID") 
-        |도서 ID
-        input(type="radio" name ="radio" value="MEMBER.NAME") 
-        |대출자 이름
-        input(type="radio" name ="radio" value="BOOK.TITLE_OF_BOOK") 
-        |도서 이름
-        input(name="Serch" type="text" placeholder="해당 회원의 id를 입력해주세요")
-        button(type="submit" name="button") 검색
+        div
+          label(for="date") 휴관일 삭제 
+          input(name="date" placeholder="월,일 4자리입력")
+          button(type="submit" name="button") 삭제 
     article
-      div
-        table(align="center",class="w3-table-all")
-          tr(class="w3-blue")
-            th 대출번호
-            th 대출자 ID
-            th 자료 ID
-            th 대출자 이름
-            th 자료 이름 
-            th 대출 일자
-            th 반납 예정일
-            
-          -for(i=0;i<data.length;i++) { user = data[i];
-            tr
-              td #{user.LENDING_SEQ}
-              td #{user.LIBRARY_ID}
-              td #{user.RECORD_ID}
-              td #{user.NAME}
-              td #{user.TITLE_OF_BOOK}
-              td #{user.LENDING_DATE}
-              td #{user.EXPECT_RETURN_DATE}
-          -}
+      table(align="center",class="w3-table-all")
+        tr(class="w3-blue")
+          th 년
+          th 월,일
+          th 사유 
+          
+        -for(i=0;i<data.length;i++) { user = data[i];
+          tr
+            td #{user.year}
+            td #{user.month_day}
+            td #{user.remarks}          
+        -}
+    
         
