--- a/views/book_register.jade
+++ b/views/book_register.jade
@@ -1,13 +1,73 @@
-extends layout
-
-block content
-  script(src="/javascripts/alert.js")
-  header
+doctype html
+html
+  head
+    title= title
+    link(rel='stylesheet', href='/stylesheets/register.css')
+    link(rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css")
+    meta(charset="utf-8")
+    meta(name="viewport" content="width=device-width, initial-scale=1")
+  body
+    nav(id="menu" class="w3-header")
+      ul
+        li
+          a(href="/") /
+        li
+          a(href="/books/register") 관리자 관리 
+          ul
+            li
+              a(href="/users/serch") 관리자검색 
+            li
+              a(href="/users/register") 관리자등록  
+            li
+              a(href="/users/modify") 관리자수정 
+            li
+              a(href="/users/delete") 관리자삭제 
+        li
+          a(href="/books/register") 회원 관리 
+          ul
+            li
+              a(href="/members/serch") 회원검색 
+            li
+              a(href="/members/register") 회원등록  
+            li
+              a(href="/members/modify") 회원수정 
+            li
+              a(href="/members/delete") 회원삭제 
+            Li 
+              a(href="/members/overdue") 연체회원 관리 
+        li
+          a(href="/books/register") 자료 관리 
+          ul
+            li
+              a(href="/books/serch") 자료검색 
+            li
+              a(href="/books/register") 자료등록  
+            li
+              a(href="/books/modify") 자료수정 
+            li
+              a(href="/books/delete") 자료삭제 
+        li
+          a(href="/books/register") 대출 반납 관리 
+          ul
+            li
+              a(href="/lendings/register") 대출등록 
+            li
+              a(href="/lendings/return") 반납등록 
+            li
+              a(href="/lendings/current") 현재 대출중인 목록 
+            li
+              a(href="/lendings/recent") 대출반납 목록 
+            li
+              a(href="/lendings/holiday") 휴관일 등록
+            li
+              a(href="/lendings/holiday/delete") 휴관일 삭제
+  header(align="center")
     h2 Book Register 
   
-  section
-    acticle
+  section(class="w3-table w3-gray")
+    acticle(class="w3-text-white")
       form(method="post")
+        br
         label(for="RECORD_ID") *자료 id
         input(name="RECORD_ID" type="record id" placeholder="id")
         br
@@ -91,8 +151,9 @@ block content
         br
         label(for="THEME_WORD5")  주제어 
         input(name="THEME_WORD5" type="text" placeholder="theme word")
-        br
         button(type="submit" name="button") 등록 
+        br
+        br
     article
       div
       
