--- a/views/index.jade
+++ b/views/index.jade
@@ -1,59 +1,142 @@
 extends layout
 
 block content
-  header(class="w3-header")
-    h2 관리자 페이지
-    ul
-      li #{name}
-      li
-        a(href="logout") 로그아웃
-  nav(id="menu")
+  nav(id="menu" class="w3-header")
     ul
       li
-        a(href="users") 관리자 관리
-        ul
-          li
-            a(href="users/serch") 관리자검색
-          li
-            a(href="users/register") 관리자등록  
-          li
-            a(href="users/modify") 관리자수정
-          li
-            a(href="users/delete") 관리자삭제
+        a(href="/") /
       li
-        a(href="members") 회원 관리
+        a(href="/") 관리자 관리
         ul
           li
-            a(href="members/serch") 회원검색
+            a(href="/users/serch") 관리자검색
           li
-            a(href="members/register") 회원등록  
+            a(href="/users/register") 관리자등록  
           li
-            a(href="members/modify") 회원수정
+            a(href="/users/modify") 관리자수정
           li
-            a(href="members/delete") 회원삭제
+            a(href="/users/delete") 관리자삭제
+      li
+        a(href="/") 회원 관리
+        ul
+          li
+            a(href="/members/serch") 회원검색
+          li
+            a(href="/members/register") 회원등록  
+          li
+            a(href="/members/modify") 회원수정
+          li
+            a(href="/members/delete") 회원삭제
           Li 
-            a(href="members/overdue") 연체회원 관리
+            a(href="/members/overdue") 연체회원 관리
       li
-        a(href="books") 자료 관리
+        a(href="/") 자료 관리
         ul
           li
-            a(href="books/serch") 자료검색
+            a(href="/books/serch") 자료검색
           li
-            a(href="books/register") 자료등록  
+            a(href="/books/register") 자료등록  
           li
-            a(href="books/modify") 자료수정
+            a(href="/books/modify") 자료수정
           li
-            a(href="books/delete") 자료삭제
+            a(href="/books/delete") 자료삭제
       li
-        a(href="lendings") 대출 반납 관리 
+        a(href="/") 대출 반납 관리 
         ul
           li
-            a(href="lendings/register") 대출등록
+            a(href="/lendings/register") 대출등록
           li
-            a(href="lendings/return") 반납등록 
+            a(href="/lendings/return") 반납등록 
           li
-            a(href="lendings/current") 현재 대출중인 목록
+            a(href="/lendings/current") 현재 대출중인 목록
           li
-            a(href="lendings/recent") 대출반납 목록
+            a(href="/lendings/recent") 대출반납 목록
           li
-            a(href="lendings/holiday") 휴관일 관리
+            a(href="/lendings/holiday") 휴관일 등록
+          li
+            a(href="/lendings/holiday/delete") 휴관일 삭제
+            
+  header(class="w3-center")
+    h1 #{name}님 반갑습니다. 
+  header(class="w3-right")
+    h2 
+    a(href="logout") 로그아웃
+  article(class="w3-footer")
+    div(style="width:400px; height:400px")
+      canvas(id="Member_Chart" width="400" height="400")
+      canvas(id="Book_Chart" width="400" height="400")
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js")
+  script.
+    const ctxM = document.getElementById('Member_Chart').getContext('2d');
+    const ChartM = new Chart(ctxM, {
+      type: 'bar',
+      data: {
+        labels: ['#{data[0].NAME}', '#{data[1].NAME}', '#{data[2].NAME}', '#{data[3].NAME}', '#{data[4].NAME}'],
+        datasets: [{
+          label: '가장 많이 빌려간 사람',
+          data: ['#{data[0].count}','#{data[1].count}','#{data[2].count}','#{data[3].count}','#{data[4].count}'],
+          backgroundColor: [
+            'rgba(255, 99, 132, 0.2)',
+            'rgba(54, 162, 235, 0.2)',
+            'rgba(255, 206, 86, 0.2)',
+            'rgba(75, 192, 192, 0.2)',
+            'rgba(153, 102, 255, 0.2)',
+            'rgba(255, 159, 64, 0.2)'
+          ],
+          borderColor: [
+            'rgba(255, 99, 132, 1)',
+            'rgba(54, 162, 235, 1)',
+            'rgba(255, 206, 86, 1)',
+            'rgba(75, 192, 192, 1)',
+            'rgba(153, 102, 255, 1)',
+            'rgba(255, 159, 64, 1)'
+          ],
+          borderWidth: 1
+        }]
+      },
+      options: {
+        scales: {
+          y: {
+            beginAtZero: true
+          }
+        }
+      }
+      });
+      const ctxB = document.getElementById('Book_Chart').getContext('2d');
+      const ChartB = new Chart(ctxB, {
+        type: 'bar',
+        data: {
+          labels: ['#{data[0].NAME}', '#{data[1].NAME}', '#{data[2].NAME}', '#{data[3].NAME}', '#{data[4].NAME}'],
+          datasets: [{
+            label: '가장 많이 빌린 책 ',
+            data: ['#{data[0].count}','#{data[1].count}','#{data[2].count}','#{data[3].count}','#{data[4].count}'],
+            backgroundColor: [
+              'rgba(255, 99, 132, 0.2)',
+              'rgba(54, 162, 235, 0.2)',
+              'rgba(255, 206, 86, 0.2)',
+              'rgba(75, 192, 192, 0.2)',
+              'rgba(153, 102, 255, 0.2)',
+              'rgba(255, 159, 64, 0.2)'
+            ],
+            borderColor: [
+              'rgba(255, 99, 132, 1)',
+              'rgba(54, 162, 235, 1)',
+              'rgba(255, 206, 86, 1)',
+              'rgba(75, 192, 192, 1)',
+              'rgba(153, 102, 255, 1)',
+              'rgba(255, 159, 64, 1)'
+            ],
+            borderWidth: 1
+          }]
+        },
+        options: {
+          scales: {
+            y: {
+              beginAtZero: true
+            }
+          }
+        }
+        });
+
+
+    
