--- a/views/lending_current.jade
+++ b/views/lending_current.jade
@@ -2,28 +2,97 @@ extends layout
 
 block content
 
-  header
+  nav(id="menu" class="w3-header")
+      ul
+        li
+          a(href="/") /
+        li
+          a(href="/lendings/current") 관리자 관리
+          ul
+            li
+              a(href="/users/serch") 관리자검색
+            li
+              a(href="/users/register") 관리자등록  
+            li
+              a(href="/users/modify") 관리자수정
+            li
+              a(href="/users/delete") 관리자삭제
+        li
+          a(href="/lendings/current") 회원 관리
+          ul
+            li
+              a(href="/members/serch") 회원검색
+            li
+              a(href="/members/register") 회원등록  
+            li
+              a(href="/members/modify") 회원수정
+            li
+              a(href="/members/delete") 회원삭제
+            Li 
+              a(href="/members/overdue") 연체회원 관리
+        li
+          a(href="/lendings/current") 자료 관리
+          ul
+            li
+              a(href="/books/serch") 자료검색
+            li
+              a(href="/books/register") 자료등록  
+            li
+              a(href="/books/modify") 자료수정
+            li
+              a(href="/books/delete") 자료삭제
+        li
+          a(href="/lendings/current") 대출 반납 관리 
+          ul
+            li
+              a(href="/lendings/register") 대출등록
+            li
+              a(href="/lendings/return") 반납등록 
+            li
+              a(href="/lendings/current") 현재 대출중인 목록
+            li
+              a(href="/lendings/recent") 대출반납 목록
+            li
+              a(href="/lendings/holiday") 휴관일 등록
+            li
+              a(href="/lendings/holiday/delete") 휴관일 삭제
+
+  header(class="w3-header w3-center")
     h2 Lending Current
   
-  section
-    acticle
-      h2 현재 대출중인 도서
-          
+  section(class="w3-cyan w3-center")
+    acticle(class="w3-text-white")
+      h2 현재 대출 내역 
+      form(method="post")
+        input(type="radio" name ="radio" value="LENDING.LIBRARY_ID" checked="checked") 
+        |대출자 ID
+        input(type="radio" name ="radio" value="LEDNING.RECORD_ID") 
+        |도서 ID
+        input(type="radio" name ="radio" value="MEMBER.NAME") 
+        |대출자 이름
+        input(type="radio" name ="radio" value="BOOK.TITLE_OF_BOOK") 
+        |도서 이름
+        input(name="Serch" type="text" placeholder="해당 회원 id를 입력해주세요")
+        button(type="submit" name="button") 검색
     article
       div
-        table
-            tr 
-              th 대출번호
-              th 대출자 ID
-              th 자료 ID
-              th 대출 일자
-              th 반납 예정일
+        table(align="center",class="w3-table-all")
+          tr(class="w3-blue")
+            th 대출번호
+            th 대출자 ID
+            th 자료 ID
+            th 대출자 이름
+            th 자료 이름 
+            th 대출 일자
+            th 반납 예정일
               
           -for(i=0;i<data.length;i++) { user = data[i];
             tr
               td #{user.LENDING_SEQ}
               td #{user.LIBRARY_ID}
               td #{user.RECORD_ID}
+              td #{user.NAME}
+              td #{user.TITLE_OF_BOOK}
               td #{user.LENDING_DATE}
               td #{user.EXPECT_RETURN_DATE}
           -}
