--- a/views/lending_holiday.jade
+++ b/views/lending_holiday.jade
@@ -2,19 +2,86 @@ extends layout
 
 block content
 
-  header
+  nav(id="menu" class="w3-header")
+      ul
+        li
+          a(href="/") /
+        li
+          a(href="/lendings/holiday") 관리자 관리
+          ul
+            li
+              a(href="/users/serch") 관리자검색
+            li
+              a(href="/users/register") 관리자등록  
+            li
+              a(href="/users/modify") 관리자수정
+            li
+              a(href="/users/delete") 관리자삭제
+        li
+          a(href="/lendings/holiday") 회원 관리
+          ul
+            li
+              a(href="/members/serch") 회원검색
+            li
+              a(href="/members/register") 회원등록  
+            li
+              a(href="/members/modify") 회원수정
+            li
+              a(href="/members/delete") 회원삭제
+            Li 
+              a(href="/members/overdue") 연체회원 관리
+        li
+          a(href="/lendings/holiday") 자료 관리
+          ul
+            li
+              a(href="/books/serch") 자료검색
+            li
+              a(href="/books/register") 자료등록  
+            li
+              a(href="/books/modify") 자료수정
+            li
+              a(href="/books/delete") 자료삭제
+        li
+          a(href="/lendings/holiday") 대출 반납 관리 
+          ul
+            li
+              a(href="/lendings/register") 대출등록
+            li
+              a(href="/lendings/return") 반납등록 
+            li
+              a(href="/lendings/current") 현재 대출중인 목록
+            li
+              a(href="/lendings/recent") 대출반납 목록
+            li
+              a(href="/lendings/holiday") 휴관일 등록
+            li
+              a(href="/lendings/holiday/delete") 휴관일 삭제
+
+
+  header(class="w3-header w3-center")
     h2 Hoilday Setting
   
-  section
-    acticle
+  section(class="w3-cyan w3-center")
+    acticle(class="w3-text-white")
+      h2 도서관이 쉬는 날을 설정하세요
       form(method="post")
         div
           label(for="date") 휴관일 설정 
           input(name="remark" type="text" placeholder="무슨 날인가요?")
           input(name="date" type="date" placeholder="설정하세요.")
-        button(type="submit" name="button") 설정 
+          button(type="submit" name="button") 설정 
     article
-      div
-        table
+      table(align="center",class="w3-table-all")
+        tr(class="w3-blue")
+          th 년
+          th 월,일
+          th 사유 
+          
+        -for(i=0;i<data.length;i++) { user = data[i];
+          tr
+            td #{user.year}
+            td #{user.month_day}
+            td #{user.remarks}          
+        -}
     
         
