--- a/views/lending_register.jade
+++ b/views/lending_register.jade
@@ -2,11 +2,67 @@ extends layout
 
 block content
 
-  header
-    h2 Lending add
+  nav(id="menu" class="w3-header")
+      ul
+        li
+          a(href="/") /
+        li
+          a(href="/lendings/register") 관리자 관리
+          ul
+            li
+              a(href="/users/serch") 관리자검색
+            li
+              a(href="/users/register") 관리자등록  
+            li
+              a(href="/users/modify") 관리자수정
+            li
+              a(href="/users/delete") 관리자삭제
+        li
+          a(href="/lendings/register") 회원 관리
+          ul
+            li
+              a(href="/members/serch") 회원검색
+            li
+              a(href="/members/register") 회원등록  
+            li
+              a(href="/members/modify") 회원수정
+            li
+              a(href="/members/delete") 회원삭제
+            Li 
+              a(href="/members/overdue") 연체회원 관리
+        li
+          a(href="/lendings/register") 자료 관리
+          ul
+            li
+              a(href="/books/serch") 자료검색
+            li
+              a(href="/books/register") 자료등록  
+            li
+              a(href="/books/modify") 자료수정
+            li
+              a(href="/books/delete") 자료삭제
+        li
+          a(href="/lendings/register") 대출 반납 관리 
+          ul
+            li
+              a(href="/lendings/register") 대출등록
+            li
+              a(href="/lendings/return") 반납등록 
+            li
+              a(href="/lendings/current") 현재 대출중인 목록
+            li
+              a(href="/lendings/recent") 대출반납 목록
+            li
+              a(href="/lendings/holiday") 휴관일 등록
+            li
+              a(href="/lendings/holiday/delete") 휴관일 삭제
+
+  header(class="w3-header w3-center")
+    h2 Lending ADD
   
-  section
-    acticle
+  section(class="w3-cyan w3-center")
+    acticle(class="w3-text-white")
+      h2 대출 하는 회원의 id 와 자료의 id를 입력하세요
       form(method="post")
         h2 도서 대출 등록 
         div
@@ -14,7 +70,9 @@ block content
           input(name="LIBRARY_ID" type="text" placeholder="member id")
           label(for="RECORD_ID") 자료 id
           input(name="RECORD_ID" type="text" placeholder="record id")
-        button(type="submit" name="button") 대출 
+          button(type="submit" name="button") 대출 
+          br
+          br
     article
       div
         table
