--- a/views/user_modify.jade
+++ b/views/user_modify.jade
@@ -1,112 +1,173 @@
-extends layout
-
-block content
-  script(src="/javascripts/alert.js")
-  header
-    h2 Administer Modify
-  
-  section
-    h2 관리자 수정
-    p 아이디를 기준으로 정보 수정이 이뤄집니다.
-    acticle
-      form(method="post")
-        label(for="id") *아이디 
-        input(name="id" type="text" placeholder="id")
-        br
-        label(for="passwd") 비밀번호 
-        input(name="passwd" type="text" placeholder="passwd")
-        br
-        label(for="kor_name") 한국이름
-        input(name="kor_name" type="text" placeholder="id")
-        br
-        label(for="eng_name") 영어이름 
-        input(name="eng_name" type="text" placeholder="id")
-        br
-        label(for="residence_id") 주민등록번호 
-        input(name="residence_id" type="text" placeholder="id")
-        br
-        label(for="birthday") 생년월일 
-        input(name="birthday" type="text" placeholder="id")
-        br
-        label(for="solar_lunar") 음력/양력 
-        input(name="solar_lunar" type="text" placeholder="id")
-        br
-        label(for="sex") 성별 
-        input(name="sex" type="text" placeholder="id")
-        br
-        label(for="marriage") 기혼/미혼 
-        input(name="marriage" type="text" placeholder="id")
-        br
-        label(for="home_num_1_1") 집 전화번호
-        input(name="home_num1_1" type="text" placeholder="010")
-        input(name="home_num_1_2" type="text" placeholder="0000")
-        input(name="honme_num_1_3" type="text" placeholder="0000")
-        br
-        label(for="home_num_2_1") 집 전화번호2 
-        input(name="home_num_2_1" type="text" placeholder="010")
-        input(name="home_num_2_2" type="text" placeholder="0000")
-        input(name="home_num2_3" type="text" placeholder="0000")
-        br
-        label(for="phone_num_1") 휴대폰 번호 
-        input(name="phone_num_1" type="text" placeholder="010")
-        input(name="phone_num_2" type="text" placeholder="0000")
-        input(name="phone_num_3" type="text" placeholder="0000")
-        br
-        label(for="zip_code") 우편번호 
-        input(name="zip_code" type="text" placeholder="id")
-        br
-        label(for="home_address") 집주소
-        input(name="home_address" type="text" placeholder="도로명 주소")
-        input(name="home_address_d" type="text" placeholder="세부주소 (동,호수)")
-        br
-        label(for="email") 이메일 
-        input(name="email" type="text" placeholder="abc@abc.com")
-        br
-        label(for="final_scholarship") 최종학력
-        input(name="final_scholarship" type="text" placeholder="id")
-        br
-        label(for="degree_scholarship") 장학 수혜내역
-        input(name="degree_sholarship" type="text" placeholder="id")
-        br
-        label(for="gradation_date") 졸업일  
-        input(name="gradation_date" type="text" placeholder="id")
-        br
-        label(for="school_name") 학교 이름
-        input(name="school_name" type="text" placeholder="id")
-        br
-        label(for="academic_degree") 학위 
-        input(name="academic_degree" type="text" placeholder="id")
-        br
-        label(for="work") 일
-        input(name="work" type="text" placeholder="id")
-        br
-        label(for="work_name") 부서
-        input(name="work_name" type="text" placeholder="id")
-        br
-        label(for="work_duty") 업무 
-        input(name="work_duty" type="text" placeholder="id")
-        br
-        label(for="work_num_1") 업무용 전화번호
-        input(name="work_num_1" type="text" placeholder="010")
-        input(name="work_num_2" type="text" placeholder="0000")
-        input(name="work_num_3" type="text" placeholder="0000")
-        br
-        label(for="work_num_ext") 내선 전화번호 
-        input(name="work_num_ext" type="text" placeholder="0000")
-        br
-        label(for="direct_num_1") 직통 전화번호
-        input(name="direct_num_1" type="text" placeholder="010")
-        input(name="direct_num_2" type="text" placeholder="0000")
-        input(name="direct_num_3" type="text" placeholder="0000")
-        br
-        label(for="work_zipcode") 직장 우편번호
-        input(name="work_zipcode" type="text" placeholder="id")
-        br
-        label(for="work_address") 직장 주소
-        input(name="work_address" type="text" placeholder="도로명 주소")
-        input(name="work_address_d" type="text" placeholder="세부주소 (동,호수)")
-        br
-        button(type="submit" name="button") 수정
-    article
-      div
-      
+doctype html
+html
+  head
+    title= title
+    link(rel='stylesheet', href='/stylesheets/register.css')
+    link(rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css")
+    meta(charset="utf-8")
+    meta(name="viewport" content="width=device-width, initial-scale=1")
+  body
+    nav(id="menu" class="w3-header")
+      ul
+        li
+          a(href="/") /
+        li
+          a(href="/users/modify") 관리자 관리 
+          ul
+            li
+              a(href="/users/serch") 관리자검색 
+            li
+              a(href="/users/register") 관리자등록  
+            li
+              a(href="/users/modify") 관리자수정 
+            li
+              a(href="/users/delete") 관리자삭제 
+        li
+          a(href="/users/modify") 회원 관리 
+          ul
+            li
+              a(href="/members/serch") 회원검색 
+            li
+              a(href="/members/register") 회원등록  
+            li
+              a(href="/members/modify") 회원수정 
+            li
+              a(href="/members/delete") 회원삭제 
+            li 
+              a(href="/members/overdue") 연체회원 관리 
+        li
+          a(href="/users/modify") 자료 관리 
+          ul
+            li
+              a(href="/books/serch") 자료검색 
+            li
+              a(href="/books/register") 자료등록  
+            li
+              a(href="/books/modify") 자료수정 
+            li
+              a(href="/books/delete") 자료삭제 
+        li
+          a(href="/users/modify") 대출 반납 관리 
+          ul
+            li
+              a(href="/lendings/register") 대출등록 
+            li
+              a(href="/lendings/return") 반납등록 
+            li
+              a(href="/lendings/current") 현재 대출중인 목록 
+            li
+              a(href="/lendings/recent") 대출반납 목록 
+            li
+              a(href="/lendings/holiday") 휴관일 등록
+            li
+              a(href="/lendings/holiday/delete") 휴관일 삭제 
+              
+    header(align="center")
+      h2 Administer Modify
+      h2 관리자 수정
+    section
+      p 아이디를 기준으로 정보 수정이 이뤄집니다.
+      acticle(class="w3-table w3-gray w3-text-white")
+        form(method="post")
+          br
+          label(for="id") *아이디 
+          input(name="id" type="text" placeholder="id")
+          br
+          label(for="passwd") 비밀번호 
+          input(name="passwd" type="password" placeholder="passwd")
+          br
+          label(for="kor_name") 한국이름
+          input(name="kor_name" type="text" placeholder="id")
+          br
+          label(for="eng_name") 영어이름 
+          input(name="eng_name" type="text" placeholder="id")
+          br
+          label(for="residence_id") 주민등록번호 
+          input(name="residence_id" type="text" placeholder="id")
+          br
+          label(for="birthday") 생년월일 
+          input(name="birthday" type="text" placeholder="id")
+          br
+          label(for="solar_lunar") 음력/양력 
+          input(name="solar_lunar" type="text" placeholder="id")
+          br
+          label(for="sex") 성별 
+          input(name="sex" type="text" placeholder="id")
+          br
+          label(for="marriage") 기혼/미혼 
+          input(name="marriage" type="text" placeholder="id")
+          br
+          label(for="home_num_1_1") 집 전화번호
+          input(name="home_num1_1" type="text" placeholder="010")
+          input(name="home_num_1_2" type="text" placeholder="0000")
+          input(name="honme_num_1_3" type="text" placeholder="0000")
+          br
+          label(for="home_num_2_1") 집 전화번호2 
+          input(name="home_num_2_1" type="text" placeholder="010")
+          input(name="home_num_2_2" type="text" placeholder="0000")
+          input(name="home_num2_3" type="text" placeholder="0000")
+          br
+          label(for="phone_num_1") 휴대폰 번호 
+          input(name="phone_num_1" type="text" placeholder="010")
+          input(name="phone_num_2" type="text" placeholder="0000")
+          input(name="phone_num_3" type="text" placeholder="0000")
+          br
+          label(for="zip_code") 우편번호 
+          input(name="zip_code" type="text" placeholder="id")
+          br
+          label(for="home_address") 집주소
+          input(name="home_address" type="text" placeholder="도로명 주소")
+          input(name="home_address_d" type="text" placeholder="세부주소 (동,호수)")
+          br
+          label(for="email") 이메일 
+          input(name="email" type="text" placeholder="abc@abc.com")
+          br
+          label(for="final_scholarship") 최종학력
+          input(name="final_scholarship" type="text" placeholder="id")
+          br
+          label(for="degree_scholarship") 장학 수혜내역
+          input(name="degree_sholarship" type="text" placeholder="id")
+          br
+          label(for="gradation_date") 졸업일  
+          input(name="gradation_date" type="text" placeholder="id")
+          br
+          label(for="school_name") 학교 이름
+          input(name="school_name" type="text" placeholder="id")
+          br
+          label(for="academic_degree") 학위 
+          input(name="academic_degree" type="text" placeholder="id")
+          br
+          label(for="work") 일
+          input(name="work" type="text" placeholder="id")
+          br
+          label(for="work_name") 부서
+          input(name="work_name" type="text" placeholder="id")
+          br
+          label(for="work_duty") 업무 
+          input(name="work_duty" type="text" placeholder="id")
+          br
+          label(for="work_num_1") 업무용 전화번호
+          input(name="work_num_1" type="text" placeholder="010")
+          input(name="work_num_2" type="text" placeholder="0000")
+          input(name="work_num_3" type="text" placeholder="0000")
+          br
+          label(for="work_num_ext") 내선 전화번호 
+          input(name="work_num_ext" type="text" placeholder="0000")
+          br
+          label(for="direct_num_1") 직통 전화번호
+          input(name="direct_num_1" type="text" placeholder="010")
+          input(name="direct_num_2" type="text" placeholder="0000")
+          input(name="direct_num_3" type="text" placeholder="0000")
+          br
+          label(for="work_zipcode") 직장 우편번호
+          input(name="work_zipcode" type="text" placeholder="id")
+          br
+          label(for="work_address") 직장 주소
+          input(name="work_address" type="text" placeholder="도로명 주소")
+          input(name="work_address_d" type="text" placeholder="세부주소 (동,호수)")
+          button(type="submit" name="button") 수정
+          br
+          br
+      article
+        div
+        
