--- a/views/user_serch.jade
+++ b/views/user_serch.jade
@@ -5,69 +5,71 @@ block content
   nav(id="menu" class="w3-header")
     ul
       li
-        a(href="users") 관리자 관리
-        ul
-          li
-            a(href="users/serch") 관리자검색
-          li
-            a(href="users/register") 관리자등록  
-          li
-            a(href="users/modify") 관리자수정
-          li
-            a(href="users/delete") 관리자삭제
+        a(href="/") /
       li
-        a(href="members") 회원 관리
+        a(href="/users/serch") 관리자 관리
         ul
           li
-            a(href="members/serch") 회원검색
+            a(href="/users/serch") 관리자검색
           li
-            a(href="members/register") 회원등록  
+            a(href="/users/register") 관리자등록  
           li
-            a(href="members/modify") 회원수정
+            a(href="/users/modify") 관리자수정
           li
-            a(href="members/delete") 회원삭제
+            a(href="/users/delete") 관리자삭제
+      li
+        a(href="/users/serch") 회원 관리
+        ul
+          li
+            a(href="/members/serch") 회원검색
+          li
+            a(href="/members/register") 회원등록  
+          li
+            a(href="/members/modify") 회원수정
+          li
+            a(href="/members/delete") 회원삭제
           Li 
-            a(href="members/overdue") 연체회원 관리
+            a(href="/members/overdue") 연체회원 관리
       li
-        a(href="books") 자료 관리
+        a(href="/users/serch") 자료 관리
         ul
           li
-            a(href="books/serch") 자료검색
+            a(href="/books/serch") 자료검색
           li
-            a(href="books/register") 자료등록  
+            a(href="/books/register") 자료등록  
           li
-            a(href="books/modify") 자료수정
+            a(href="/books/modify") 자료수정
           li
-            a(href="books/delete") 자료삭제
+            a(href="/books/delete") 자료삭제
       li
-        a(href="lendings") 대출 반납 관리 
+        a(href="/users/serch") 대출 반납 관리 
         ul
           li
-            a(href="lendings/register") 대출등록
+            a(href="/lendings/register") 대출등록
           li
-            a(href="lendings/return") 반납등록 
+            a(href="/lendings/return") 반납등록 
           li
-            a(href="lendings/current") 현재 대출중인 목록
+            a(href="/lendings/current") 현재 대출중인 목록
           li
-            a(href="lendings/recent") 대출반납 목록
+            a(href="/lendings/recent") 대출반납 목록
           li
-            a(href="lendings/holiday") 휴관일 관리
+            a(href="/lendings/holiday") 휴관일 등록
+          li
+            a(href="/lendings/holiday/delete") 휴관일 삭제
 
   header(class="w3-header w3-center")
     h1 Administer Serch
   
-  section(class="w-3 table w3-cyan w3-center")
+  section(class="w3-cyan w3-center")
     header(class="w3-text-white")
       h2 검색할 회원의 이름을 입력하세요
       form(method="post")
-        table(align="center")
-          tr
-            td
-              label(for="name") 관리자 검색
-            td
-              input(name="name" type="text" placeholder="검색하세요.")
-            td
-              button(type="submit" name="button" class="w3-button w3-round-xxlarge w3-white w3-block") 검색
+        input(type="radio" name ="radio" value="id") 
+        |ID 
+        input(type="radio" name ="radio" value="name" checked="checked") 
+        |이름 
+        input(name="value" type="text" placeholder="검색하세요.")
+        button(type="submit" name="button") 검색
     article
       div
         table(align="center",class="w3-table-all")
@@ -82,7 +84,7 @@ block content
               td #{user.UNION_ID}
               td #{user.KOREAN_NAME}
               td #{user.SEC_E_MAIL}
-              td #{user.DIRECT_PHONE1} #{user.DIRECT_PHONE2} #{user.DIRECT_PHONE3}
+              td #{user.SEC_MOBILE_PHONE1} #{user.SEC_MOBILE_PHONE2} #{user.SEC_MOBILE_PHONE3}
           -}
             
             
